--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -1,14 +1,14 @@
 spring.application.name=alexandria
 
 # Configuracao do DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/alexandriadb?createDatabaseIfNotExist=true
+spring.datasource.url=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
+spring.datasource.username=
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # Configuracao do Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=
 
 # Configuracao da JPA
-spring.jpa.show-sql=true
+spring.jpa.show-sql=
